--- a/second.html
+++ b/second.html
@@ -5,17 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="./second.html" />
   </head>
   <body>
-    <div id="app"></div>
-    <section class="yoyo">
-      <div id="starwars"></div>
-      <div id="hello"></div>
-    </section>
-    <div>
-      <div id="tricks"></div>
-    </div>
-    <script src="./index.js"></script>
+    <script src="./second.js"></script>
   </body>
 </html>
